tests/error/effects_errors/pure_calls_impure_callable_comptime.err
Error: Too many effects (at $FILE:7:10)
  | 
5 | @guppy(effects=[])
6 | def main(impure_f: Callable[[int], int]) -> int:
7 |    return impure_f(5)
  |           ^^^^^^^^ Callee of type `int -> int` has effects `[ANY]` not allowed
  |                    inside `main`

Note:
  | 
4 | 
5 | @guppy(effects=[])
  |  ----------------- Allowed effects declared here

Guppy compilation failed due to 1 previous error
